Final work on Wordy

--- a/views/new_post.ejs
+++ b/views/new_post.ejs
@@ -21,11 +21,11 @@
                     <form action="/posts/new_post" method="post">
                         <div class="mb-3">
                             <label for="title" class="form-label">Title</label>
-                            <input type="text" class="form-control" id="title" name="title">
+                            <input required type="text" class="form-control" id="title" name="title">
                         </div>
                         <div class="mb-3">
                             <label for="snippet" class="form-label">Snippet</label>
-                            <input type="text" class="form-control" id="snippet" name="snippet">
+                            <input required type="text" class="form-control" id="snippet" name="snippet">
                         </div>
                         <div class="mb-3">
                             <label for="content" class="form-label">Content</label>
@@ -44,19 +44,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
