--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -14,6 +14,16 @@
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Home</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/about">About</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/posts/new_post">New Post</a>
+
+            <% if (user) { %>
+             
+                <a class="me-3 py-2 text-dark text-decoration-none" href="/auth/dashboard/<%= user._id %> ">Dashboard</a>
+                <a class="me-3 py-2 text-dark text-decoration-none" href="/auth/logout">Logout</a>
+                <% } else { %>
+                    <a class="me-3 py-2 text-dark text-decoration-none" href="/auth/register">Sign Up</a>
+                    <a class="me-3 py-2 text-dark text-decoration-none" href="/auth/login">Login</a>
+
+            <% } %>     
         </nav>
     </div>
 
