--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,13 @@
                     <p class="col-md-8 fs-4">Wordy is a mini blog that is built with NodeJS on top of the express
                         framework. Wordy allows anyone, like you, to publish blogs without having to undergo any
                         validation.</p>
+
+                        <% if(user) { %> 
+
                     <a class="btn btn-primary btn-lg" type="button" href="/posts/new_post">Publish A Post</a>
+                    <% } else { %>
+                        <a class="btn btn-primary btn-lg" type="button" href="/auth/login">Sign In To Publish A Post</a>
+                        <% } %> 
                 </div>
             </div>
 
@@ -32,6 +38,9 @@
 
                     <div class="col-md-4 mt-5">
                         <div class="h-100 p-5 text-white bg-dark rounded-3">
+                            <% if (post.author) { %> 
+                            <a class="btn btn-outline-light" type="button" href="/auth/dashboard/<%= post.author?._id %>">Author: <%= post.author?.firstName%></a>
+                            <% } %> 
                             <h2><%= post.title %></h2>
                             <p><%= post.snippet %></p>
                             <a class="btn btn-outline-light" type="button" href="/posts/read/<%= post._id %>">Read More</a>
